"""geometry examples"""

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//tools/bazel:copts.bzl", "LE_COPTS_COMPAT")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "test_geometry_stereo_pluecker",
    srcs = ["stereo_pluecker_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/geometry:lib_geometry",
        "@opencv",
    ],
)

cc_binary(
    name = "test_geometry_gt",
    srcs = ["gt_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/geometry:lib_geometry",
        "@opencv",
    ],
)

cc_binary(
    name = "test_geometry_line",
    srcs = ["line_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/geometry:lib_geometry",
        "//libs/imgproc:lib_imgproc",
        "@opencv",
    ],
)

cc_binary(
    name = "test_geometry_poly",
    srcs = ["poly_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/geometry:lib_geometry",
        "//libs/imgproc:lib_imgproc",
        "@opencv",
    ],
)

# OpenGL-dependent examples
cc_binary(
    name = "test_geometry_obj",
    srcs = ["obj_test.cpp"],
    copts = LE_COPTS_COMPAT + [
        "-Wno-unused-parameter",  # obj_test has unused main args
    ],
    tags = ["opengl"],
    deps = [
        "//libs/geometry:lib_geometry",
        "@opencv",
    ],
)
