"""geometry examples"""

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//tools/bazel:copts.bzl", "LE_COPTS_COMPAT")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "test_geometry_stereo_pluecker",
    srcs = ["src/stereo_pluecker_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/geometry:lib_geometry",
        "@opencv",
    ],
)

cc_binary(
    name = "test_geometry_gt",
    srcs = ["src/gt_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/geometry:lib_geometry",
        "@opencv",
    ],
)

cc_binary(
    name = "test_geometry_line",
    srcs = ["src/line_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/geometry:lib_geometry",
        "//libs/imgproc:lib_imgproc",
        "@opencv",
    ],
)

cc_binary(
    name = "test_geometry_poly",
    srcs = ["src/poly_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/geometry:lib_geometry",
        "//libs/imgproc:lib_imgproc",
        "@opencv",
    ],
)
