"""imgproc examples"""

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//tools/bazel:copts.bzl", "LE_COPTS_COMPAT")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "test_imgproc_steer",
    srcs = ["steer_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/imgproc:lib_imgproc",
        "@opencv",
    ],
)

cc_binary(
    name = "test_imgproc_grad_ops",
    srcs = ["grad_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/edge:lib_edge",
        "//libs/imgproc:lib_imgproc",
        "@opencv",
    ],
)

cc_binary(
    name = "test_imgproc_step_line",
    srcs = ["step_line_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/edge:lib_edge",
        "//libs/imgproc:lib_imgproc",
        "@opencv",
    ],
)

cc_binary(
    name = "test_imgproc_fft",
    srcs = ["fft_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/utility:lib_utility",
        "@opencv",
    ],
)

cc_binary(
    name = "test_imgproc_pyramid",
    srcs = ["pyramid_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/edge:lib_edge",
        "//libs/imgproc:lib_imgproc",
        "@opencv",
    ],
)

cc_binary(
    name = "test_imgproc_noise",
    srcs = ["noise_test.cpp"],
    copts = LE_COPTS_COMPAT,
    deps = [
        "//libs/imgproc:lib_imgproc",
        "@opencv",
    ],
)
