"""Line Segment Detection examples"""

load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "lsd",
    srcs = ["lsd.cpp"],
    deps = [
        "//libs/lsd:lib_lsd",
        "@opencv",
    ],
)

cc_binary(
    name = "lsd_cc_test",
    srcs = ["lsd_cc_test.cpp"],
    deps = [
        "//libs/lsd:lib_lsd",
        "@opencv",
    ],
)

cc_binary(
    name = "lsd_edge",
    srcs = ["lsd_edge.cpp"],
    deps = [
        "//libs/lsd:lib_lsd",
        "@opencv",
    ],
)

cc_binary(
    name = "lsd_graph",
    srcs = ["lsd_graph.cpp"],
    deps = [
        "//libs/lsd:lib_lsd",
        "@opencv",
    ],
)

cc_binary(
    name = "lsd_nfa",
    srcs = ["lsd_nfa.cpp"],
    deps = [
        "//libs/lsd:lib_lsd",
        "@opencv",
    ],
)

cc_binary(
    name = "lsd_video",
    srcs = ["lsd_video.cpp"],
    deps = [
        "//libs/lsd:lib_lsd",
        "@opencv",
    ],
)
