"""Line Segment Detection examples"""

load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

# Common dependencies for all LSD examples
_LSD_DEPS = [
    "//libs/eval:lib_eval",
    "//libs/lsd:lib_lsd",
    "@opencv",
]

# Common data dependencies for test images
_TEST_DATA = [
    "//resources:windmill",
    "//resources/datasets:noise",
]

cc_binary(
    name = "lsd",
    srcs = ["lsd.cpp"],
    data = _TEST_DATA,
    deps = _LSD_DEPS,
)

cc_binary(
    name = "lsd_cc_test",
    srcs = ["lsd_cc_test.cpp"],
    data = _TEST_DATA,
    deps = _LSD_DEPS,
)

cc_binary(
    name = "lsd_edge",
    srcs = ["lsd_edge.cpp"],
    data = _TEST_DATA,
    deps = _LSD_DEPS,
)

cc_binary(
    name = "lsd_graph",
    srcs = ["lsd_graph.cpp"],
    data = _TEST_DATA,
    deps = _LSD_DEPS,
)

cc_binary(
    name = "lsd_nfa",
    srcs = ["lsd_nfa.cpp"],
    data = _TEST_DATA,
    deps = _LSD_DEPS,
)

cc_binary(
    name = "lsd_video",
    srcs = ["lsd_video.cpp"],
    deps = [
        "//libs/lsd:lib_lsd",
        "@opencv",
    ],
)
