"""Line Segment Detection examples"""

load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

# Common dependencies for all LSD examples
_LSD_DEPS = [
    "//libs/utility:lib_utility",
    "//libs/lsd:lib_lsd",
    "@opencv",
]

# Common data dependencies for test images
_TEST_DATA = [
    "//resources:windmill",
    "//resources/datasets:noise",
]

cc_binary(
    name = "lsd",
    srcs = ["src/lsd.cpp"],
    data = _TEST_DATA,
    deps = _LSD_DEPS,
)

cc_binary(
    name = "lsd_cc_test",
    srcs = ["src/lsd_cc_test.cpp"],
    data = _TEST_DATA,
    deps = _LSD_DEPS,
)

cc_binary(
    name = "lsd_edge",
    srcs = ["src/lsd_edge.cpp"],
    data = _TEST_DATA,
    deps = _LSD_DEPS,
)

cc_binary(
    name = "lsd_graph",
    srcs = ["src/lsd_graph.cpp"],
    data = _TEST_DATA,
    deps = _LSD_DEPS,
)

cc_binary(
    name = "lsd_nfa",
    srcs = ["src/lsd_nfa.cpp"],
    data = _TEST_DATA,
    deps = _LSD_DEPS,
)

cc_binary(
    name = "lsd_video",
    srcs = ["src/lsd_video.cpp"],
    deps = [
        "//libs/lsd:lib_lsd",
        "@opencv",
    ],
)
